compiler/tests-spec/testData/psi/linked/expressions/constant-literals/the-types-for-integer-literals/p-1/neg/1.4.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, the-types-for-integer-literals -> paragraph 1 -> sentence 1
 * NUMBER: 4
 * DESCRIPTION: The long literal mark after not integer literals.
 */

konst konstue = 'a'l
konst konstue = .09L
konst konstue = 10.10l
konst konstue = "..."L
